--- a/app/di.yml
+++ b/app/di.yml
@@ -218,9 +218,10 @@ services:
   ldapTransport:
     class: 'Zend\Ldap\Ldap'
     arguments:
-      - 'host': '%ldap.host%'
-        'baseDn': '%ldap.baseDn%'
-        'accountDomainNameShort': '%ldap.domain%'
+      -
+        host: %ldap.host%
+        baseDn: %ldap.baseDn%
+        accountDomainNameShort: %ldap.domain%
 
   ldapService:
     class: 'MCP\Corp\Account\QLAdService'
