--- a/app/routes.yml
+++ b/app/routes.yml
@@ -9,7 +9,7 @@ parameters:
             stack: ['login.page']
 
         login.handle:
-            method: 'GET'
+            method: 'POST'
             route: '/login'
             stack: ['login.handle']
 
@@ -123,7 +123,7 @@ parameters:
             conditions: {build: %routes.regex.buildId%}
 
         push.handle:
-            method: 'GET'
+            method: 'POST'
             route: '/build/:build/push'
             stack: ['login.bouncer', 'build.push.handle']
             conditions: {build: %routes.regex.buildId%}
