Add ability to autoprune invalid ldap users on the users page:

--- a/app/di.pages.yml
+++ b/app/di.pages.yml
@@ -549,6 +549,8 @@ services:
       - @users.twig
       - @layout
       - @user.repo
+      - @doctrine.em
+      - @ldapService
   users.twig:
     parent: 'twig.template'
     tags: [{name: 'twig.template'}]
