--- a/app/routes.yml
+++ b/app/routes.yml
@@ -220,6 +220,22 @@ parameters:
             conditions: {id: '[\d]+'}
 
         ########################################################################################################################
+        # USER TOKEN MANAGEMENT ROUTES
+        ########################################################################################################################
+
+        user.token.create.handle:
+            method: 'POST'
+            route: '/tokens'
+            stack: ['login.bouncer', 'user.token.create.handle']
+
+        user.token.delete.handle:
+            method: 'GET'
+            route: '/tokens/:token/revoke'
+            stack: ['login.bouncer', 'user.token.delete.handle']
+            conditions:
+                - token: '[0-9a-zA-Z]{40,40}'
+
+        ########################################################################################################################
         # REPOSITORY ROUTES
         ########################################################################################################################
 
