--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,8 @@
         "ql/mcp-core": "1.*",
         "ql/mcp-corp-account": "~0.2@rc",
         "ql/mcp-logger": "1.2.*",
+        "ql/http-problem": "~1.0",
+        "ql/exception-toolkit": "~0.1",
         "slim/slim": "2.4.*",
         "symfony/dependency-injection": "2.4.*",
         "symfony/config": "2.4.*",
