--- a/app/di.yml
+++ b/app/di.yml
@@ -194,7 +194,7 @@ services:
 
   layout:
     class: 'QL\Hal\Layout'
-    arguments: [@user, @permissions]
+    arguments: [@service_container, @permissions]
 
   # The primary twig template. All other twig services should use this service as a parent
   twig.template:
