--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "gulp-concat": "^2.2.0",
     "gulp-if": "^1.2.0",
     "gulp-jshint": "^1.5.3",
+    "gulp-json-editor": "2.1.1",
     "gulp-load-plugins": "^0.4.0",
     "gulp-plumber": "^0.6.1",
+    "gulp-rename": "1.2.0",
     "gulp-uglify": "^0.3.0",
     "open": "0.0.4",
     "requirejs": "^2.1.11",
