--- a/composer.json
+++ b/composer.json
@@ -29,20 +29,20 @@
         "php-64bit": "~5.4",
         "predis/predis": "~1.0",
         "psr/log": "*",
+        "ql/exception-toolkit": "~0.1",
         "ql/hal-core": "dev-master@dev",
+        "ql/http-problem": "~1.0",
         "ql/mcp-cache": "~2.1",
         "ql/mcp-core": "1.*",
         "ql/mcp-corp-account": "~0.2@rc",
         "ql/mcp-logger": "1.3.*",
-        "ql/http-problem": "~1.0",
-        "ql/exception-toolkit": "~0.1",
+        "ql/panthor": "~1.1",
         "slim/slim": "2.4.*",
-        "symfony/dependency-injection": "2.4.*",
-        "symfony/config": "2.4.*",
-        "symfony/debug": "2.5.*",
-        "symfony/yaml": "2.4.*",
-        "twig/twig": "~1.15",
-        "icecave/semver": "~3.0"
+        "symfony/dependency-injection": "~2.5",
+        "symfony/config": "~2.5",
+        "symfony/debug": "~2.5",
+        "symfony/yaml": "~2.5",
+        "twig/twig": "~1.15"
     },
     "require-dev": {
         "mockery/mockery": "*",
