Add symfony finder for finding twig templates

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "symfony/dependency-injection": "~2.5",
         "symfony/config": "~2.5",
         "symfony/debug": "~2.5",
+        "symfony/finder": "~2.5",
         "symfony/yaml": "~2.5",
         "twig/twig": "~1.15"
     },
