--- a/app/config.global.yml
+++ b/app/config.global.yml
@@ -3,6 +3,7 @@ parameters:
     application.title: 'HAL 9000'
 
     debug: false
+    twig.debug: false
     debug.godmode: 0
 
     ldap.host: 'ldap.example.com'
