--- a/app/environment/dev.yml
+++ b/app/environment/dev.yml
@@ -1,6 +1,8 @@
 parameters:
     application.title: 'HAL 9000 DEV'
+
     debug: true
+    twig.debug: true
 
     doctrine.connection:
         driver:         pdo_mysql
