Stop installing gems locally
We now use the standard system gem installation dir since HAL automatically isolates rubygems.

Also:
- Update readme
- Update bin/clean

--- a/.gitignore
+++ b/.gitignore
@@ -9,18 +9,17 @@ atlassian-ide-plugin.xml
 /.phpunit/
 /phpunit.xml
 
-# compiled assets / package installation
+# compiled assets
 /.bundle/
 /.sass-cache/
-/bin/sass
-/bin/sass-convert
-/bin/scss
-/bower_components/
 /js/require-config.json
-/node_modules/
 /public/css/
 /public/img/
 /public/js/
+
+# package installation
+/bower_components/
+/node_modules/
 /vendor/
 
 # compiled configuration
